icons fixes and alignment fixes, following feedback from tino in flowdock

--- a/jsapp/kobo/stylesheets/partials/_xlformbuilder_styles.scss
+++ b/jsapp/kobo/stylesheets/partials/_xlformbuilder_styles.scss
@@ -249,6 +249,16 @@
     }
 }
 
+.card__text {
+    .editable-container {
+        width: 100%;
+        .editable-input input {
+            border:none;
+            border-radius:none;
+        }
+    }
+}
+
 // ==========================================================================
 // Single/multiple select questions
 // ==========================================================================
